# praxis

./: .gitignore  .gitmodules  .mise.toml  .swift-format  CLAUDE.md  Cargo.toml  Makefile  Project.swift  README.md  XCODE_SETUP.md  devenv.nix  protocol.md  reflection-template.md  task.md  test-app.sh  test-process-helpers.swift  test-rust-cli.swift
.github/workflows/: ci.yml
AethelSwift/: .swift-format  Makefile  Package.resolved  Package.swift  run-golden-tests.sh
AethelSwift/BuildTools/: Package.resolved
AethelSwift/Sources/AethelCLI/: main.swift
AethelSwift/Sources/AethelCore/: AethelCore.swift
AethelSwift/Tests/A4CoreSwiftTests/: AnchorTests.swift  AppendTests.swift  FilesTests.swift  NotesTests.swift  VaultTests.swift
AethelSwift/Tests/AethelCoreTests/: DocTests.swift  VaultTests.swift
AethelSwift/Tests/GoldenTests/: GoldenTestRunner.swift  TestCase.swift
MomentumApp/Resources/: checklist.json  reflection-template.md
MomentumApp/Sources/: ActiveSessionFeature.swift  AnalysisFeature.swift  AppDelegate.swift  AppFeature+Effects.swift  AppFeature+Navigation.swift  AppFeature+State.swift  AppFeature.swift  MomentumApp.swift  PreparationFeature+Checklist.swift  PreparationFeature.swift  ReflectionFeature.swift
MomentumApp/Sources/Dependencies/: A4Client.swift  ChecklistClient.swift  DateGenerator.swift  ProcessHelpers.swift  ProcessRunner.swift  RustCoreClient.swift  SharedKeys.swift  TestServerClient.swift
MomentumApp/Sources/Extensions/: Color+Extensions.swift  Font+Extensions.swift  UIConstants.swift  View+Styling.swift
MomentumApp/Sources/Models/: AppError.swift  ChecklistModels.swift  Goal.swift  Minutes.swift  RustCoreModels.swift  SessionModels.swift
MomentumApp/Sources/Styles/: ChecklistToggleStyle.swift  IntentionTextFieldStyle.swift  SanctuaryButtonStyle.swift
MomentumApp/Tests/: ActiveSessionFeatureTests.swift  AppFeatureTests.swift  ChecklistTests.swift  ErrorHandlingTests.swift  FullFlowTests.swift  PreparationFeatureTests.swift  ReflectionFeatureTests.swift  SessionManagementTests+StartStop.swift  SessionManagementTests.swift  TestHelpers.swift
apps/momentum/: .package.resolved  CLAUDE.md  Makefile  Project.swift
core/aethel/: .gitignore  CLAUDE.md  Cargo.toml  Makefile
core/aethel/.github/: CI.md
core/aethel/.github/workflows/: pr-quick.yml  release.yml
core/aethel/AethelSwift/: README.md  task.md
core/aethel/AethelSwift/BuildTools/: Package.swift
core/aethel/AethelSwift/Sources/A4CoreSwift/: A4CoreSwift.swift
core/aethel/AethelSwift/Sources/A4CoreSwift/Append/: Append.swift
core/aethel/AethelSwift/Sources/A4CoreSwift/Errors/: A4Error.swift
core/aethel/AethelSwift/Sources/A4CoreSwift/Headings/: Headings.swift
core/aethel/AethelSwift/Tests/A4CoreSwiftTests/: DatesTests.swift  HeadingsTests.swift
core/aethel/AethelSwift/Tests/A4GoldenParityTests/: GoldenParityTests.swift
core/aethel/crates/a4-cli/tests/: anchor_test.rs  sync_test.rs
core/aethel/crates/a4-core/src/: error.rs  headings.rs  lib.rs
core/aethel/docs/: swift-integration-guide.md
core/aethel/scripts/: init_a4_core.sh  run-swift-format.sh
crates/a4-cli/: Cargo.toml
crates/a4-cli/src/: cli.rs  env.rs  logging.rs  main.rs
crates/a4-cli/tests/: cli_tests.rs  template_test.rs
crates/a4-core/: Cargo.toml
crates/a4-core/src/: anchors.rs  append.rs  date.rs  git_backend.rs  lib.rs  notes.rs  util.rs  vault.rs
crates/aethel-cli/: Cargo.toml
crates/aethel-cli/src/: error.rs  main.rs
crates/aethel-cli/src/commands/: add_pack.rs  check.rs  init.rs  list.rs  mod.rs  read.rs  remove_pack.rs  util.rs  write.rs
crates/aethel-cli/tests/: golden_tests.rs  init_integration_tests.rs
crates/aethel-core/: Cargo.toml
crates/aethel-core/src/: doc.rs  error.rs  lib.rs  pack.rs  patch.rs  schemas.rs  test_mode.rs  tests.rs  utils.rs  validate.rs  vault.rs
docs/: brand-reference.md  brand.md  golden-tests.md  implementation-layers.md  llms-usage.md  protocol.md  sdd.md  swift-plan.md  swift-testing.md
docs/todos/: 01-fix-tests-shared-state.md  01-shared-state-persistence.md  02-navigation-improvements.md  03-simplified-bindings.md  04-alert-error-handling.md  05-dependency-optimization.md  preparation-view-html-match.md
integrations/chrome-ingest/: README.md
integrations/google-calendar-mcp/: .gitignore  fix-oauth-testing.md  setup-google-calendar-mcp.md  setup-mcp.sh
momentum/: Cargo.toml
momentum/.cargo/: config.toml
momentum/packs/momentum/: pack.json
momentum/packs/momentum/templates/: checklist.md
momentum/packs/momentum/types/: checklist.json  reflection.json  session.json
momentum/src/: action.rs  aethel_storage.rs  effects.rs  environment.rs  index.rs  main.rs  models.rs  state.rs  tests.rs  update.rs  vault_init.rs
momentum/src/tests/: analyze_tests.rs  checklist_tests.rs  filename_tests.rs  index_tests.rs  mock_helpers.rs  mod.rs  start_tests.rs  stop_tests.rs
todos/: project-description.md  todos.md
todos/done/: 2025-01-18-refactor-files-200-lines-analysis.md  2025-01-18-refactor-files-200-lines.md  2025-07-16-00-12-13-refactor-file-sizes.md  2025-07-18-13-51-44-add-goal-to-reflection-filename.md  2025-07-18-14-13-51-use-cli-tools-instead-of-api-analysis.md  2025-07-18-14-13-51-use-cli-tools-instead-of-api.md  2025-07-18-14-30-11-add-github-actions-ci-analysis.md  2025-07-18-14-34-18-remove-the-alerts.md  2025-07-19-00-46-29-ui-sizing-glitches-analysis.md  2025-07-19-00-46-29-ui-sizing-glitches.md  2025-07-19-12-03-48-fix-claude-cli-path-analysis.md  2025-07-19-12-04-21-better-handling-of-application-state-analysis.md
tools/domino-id/: Cargo.toml
workflows/weekly-plan/: weekly-plan.md  weekly-reflection-questions.md  weekly-roles.md
(+151 files in other folders)
