[workspace]
resolver = "2"
members = [
    "crates/aethel-core",
    "crates/aethel-cli",
]

[workspace.package]
edition = "2021"
authors = ["Aethel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aethel/aethel"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time and UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }

# Schema validation
jsonschema = "0.26"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# File operations
tempfile = "3.14"
glob = "0.3"
walkdir = "2.5"

# Static initialization
once_cell = "1.20"

# Concurrency
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
rstest = "0.24"
assert_matches = "1.5"
insta = { version = "1.41", features = ["json", "yaml"] }
assert_cmd = "2.0"
predicates = "3.1"