[workspace]
resolver = "2"
members = [
    "crates/a4-core",
    "crates/a4-cli",
]

[workspace.package]
edition = "2021"
authors = ["Aethel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aethel/aethel"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
time = { version = "0.3", features = ["local-offset", "formatting", "parsing"] }
time-tz = { version = "2.0", features = ["system"] }

# Git
gix = { version = "0.68", default-features = false, features = ["blocking-network-client"] }

# Serialization (for front matter)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Regex
regex = "1.11"

# File operations
tempfile = "3.14"
fs-err = "3.0"
walkdir = "2.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
insta = { version = "1.41", features = ["json", "yaml"] }
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.1"