[package]
name = "aethel-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Aethel document management system"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Time and UUID
uuid = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }

# Schema validation
jsonschema = { workspace = true }

# Error handling
thiserror = { workspace = true }

# File operations
tempfile = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }

# Static initialization
once_cell = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
assert_matches = { workspace = true }
insta = { workspace = true }